--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: shinyGPT
 Type: Package 
 Title: Shiny app for chat and create images with chatGPT
-Version: 0.1.3.9000
-Date: 2023-04-15
+Version: 0.2.0.9000
+Date: 2023-04-18
 Authors@R: c(
   person("Choonghyun", "Ryu",, "choonghyun.ryu@gmail.com", role = c("aut", "cre"))
   )
@@ -11,9 +11,14 @@ Imports:
     bitGPT (>= 0.3.8.9000),
     dplyr,
     htmltools,
+    rvest,
     shiny,
     shinybusy,
-    shinyjs
+    shinydashboard,
+    shinydashboardPlus,
+    shinyWidgets,
+    shinyjs,
+    xml2
 Author: Choonghyun Ryu [aut, cre]
 Maintainer: Choonghyun Ryu <choonghyun.ryu@gmail.com>
 License: GPL-2 | file LICENSE
